# NS2Windows

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  release.js
docs/: entity-relationship-diagram.md
src/: app.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migration/: .gitignore  Cargo.toml
src-tauri/migration/src/: lib.rs  m20260513_215331_create_tables_v1.rs  m20260625_221540_profile_refactor_v2.rs
src-tauri/src/: lib.rs  main.rs  ns_controller.rs  state.rs
src-tauri/src/commands/: connections.rs  controllers.rs  mod.rs  profiles.rs  settings.rs
src-tauri/src/communication/: communicator.rs  mod.rs
src-tauri/src/connection/: connected_controller.rs  connected_device.rs  connection_state.rs  connector.rs  joy_con_side.rs  mod.rs  motion_source.rs  pro_kind.rs
src-tauri/src/data/: controller_data.rs  input_data.rs  mod.rs  motion_data.rs  ns_controller_kind.rs  ns_input.rs  output.rs  output_data.rs  profile_kind.rs  ps4_controller_data.rs  stick_data.rs  trigger_data.rs  xbox360_controller_data.rs
src-tauri/src/decode/: decoder.rs
src-tauri/src/dtos/: connection.rs  controller_kind.rs  emulated_controller.rs  mod.rs  motion_source.rs  ns_connected_controller.rs
src-tauri/src/encode/: ds4_encoder.rs  encoder.rs  mod.rs  rumble_encoder.rs  xbox_encoder.rs
src-tauri/src/entities/: condition.rs  mod.rs  ns_input_type.rs  out_input_type.rs  profile.rs  profile_kind_type.rs  value_condition.rs
src-tauri/src/evaluation/: evaluator.rs
src-tauri/src/profiles/: condition.rs  mod.rs  profile.rs
src-tauri/src/profiles/input/: binary_input.rs  binary_operator.rs  grouping_input.rs  input.rs  mod.rs  unary_input.rs  unary_operator.rs  value_input.rs
src-tauri/src/repositories/: mod.rs  profile_repository.rs  repository_error.rs
src-tauri/src/state/: app_state.rs  emulated_controller_task.rs  mod.rs  ns_controller.rs
src/lib/: connectionRemoval.ts  stores.ts  types.ts
src/lib/components/: ConnectionsTab.svelte  ControllersTab.svelte  DefaultsWizardModal.svelte  ExpressionInput.svelte  GcControllerInput.svelte  LeftJoyConInput.svelte  MappingModal.svelte  MotionInputBars.svelte  ProControllerInput.svelte  ProfileEditor.svelte  ProfilesTab.svelte  RightJoyConInput.svelte  SettingsTab.svelte  Tabs.svelte
src/lib/components/icons/: DualJoyConsIcon.svelte  GcControllerIcon.svelte  JoyConLeftIcon.svelte  JoyConRightIcon.svelte  ProControllerIcon.svelte  Ps4Icon.svelte  Xbox360Icon.svelte
src/lib/utils/: expressionParser.ts
src/routes/: +page.svelte
