[package]
name = "ns2windows"
version = "0.8.0"
description = "An application for using Nintendo Switch 2 Controllers on Windows"
authors = ["Valentín Bersi"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ns2windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "2.0.0-rc.38", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-uuid"] }
sea-orm-migration = "2.0.0-rc.38"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.1", features = ["v4", "v7", "std"] }
maplit = "1.0.2"
bitflags = "2.11.1"
vigem-rust = "0.1.1"
btleplug = "0.12.0"
migration = { path = "./migration" }
futures = "0.3.32"
postcard = { version = "1.1.3", features = ["alloc"] }
